--- a/client/packages/cms/assets/layout/layout.scss
+++ b/client/packages/cms/assets/layout/layout.scss
@@ -1,6 +1,6 @@
-@import './variables/_common';
-@import './variables/_light';
-@import './variables/_dark';
+@use './variables/_common';
+@use './variables/_light';
+@use './variables/_dark';
 
 .sakai-theme {
     @import './_mixins';
