--- a/client/packages/cms/assets/styles.scss
+++ b/client/packages/cms/assets/styles.scss
@@ -1,4 +1,4 @@
     /* You can add global styles to this file, and also import other style files */
-    @import './layout/layout.scss';
+    @use './layout/layout.scss';
     // @import 'primeicons/primeicons.css';
     // @import '@/assets/demo/demo.scss';
